android/v1.3.1/UX_SDK_README.md
# Stylitics UX SDK

It provides views to display Stylitics data. It also handles invoking of tracking events based on user interaction with these views.

## Features

SDK provides multiple custom view options to Sample Integrator App so it can easily display Stylitics data.

1. Outfits
    * [Classic Outfit Widget](CLASSIC_WIDGET_README.md)
    * [Hotspot Outfit Widget](HOTSPOT_WIDGET_README.md)

2. Outfit Items
    * [Standard Product List View](STANDARD_PRODUCTLIST_README.md)

3. Replacements
    * Replacement View (Displayed internally from Product List View)

## Localization

Below is the screenshot with localized data when locale is configured to "en-gb".

</br>![Image1](Screenshots/product_list_with_localized_data.png)

*Note : When 'locale' is configured and the product items are displayed with the localized data, the price decimal parameter configuration will be ignored.*

## Android Versioning Support

- Minimum required android API level to access features of UX SDK is - 21(Android 5.0)
- Target android API level is 32(Android 13/ Beta)

## License

Copyright © 2023 Stylitics
